m3-music/vpc.tf
resource "aws_vpc" "main" {
    cidr_block           = var.vpc_cidr
    enable_dns_support   = true
    enable_dns_hostnames = true

    tags = {
        Name = "${var.project_name}-VPC"
    }
}


resource "aws_vpc_endpoint" "s3_endpoint" {
    vpc_id             = aws_vpc.main.id
    service_name       = "com.amazonaws.ap-south-1.s3"
    vpc_endpoint_type  = "Gateway"

    route_table_ids = [
        aws_route_table.private_route_table.id
    ]

    tags = {
        Name = "${var.project_name}-s3-vpc-endpoint"
    }
}
